--- a/example-configs/camels-multimet-handoff-forecast-lstm-config.yml
+++ b/example-configs/camels-multimet-handoff-forecast-lstm-config.yml
@@ -62,41 +62,56 @@ dynamics_data_dir: gs://caravan-multimet/v1.1
 # This allows loading the input and target data from CSV files instead of NetCDF files.
 load_as_csv: False
 
-# -- Time Periods (format: dd/mm/yyyy) --
-train_start_date: 01/10/2012
-train_end_date: 30/09/2017
+# Number of parallel processes to use for loading target features.
+load_target_features_parallel_processes:
 
-validation_start_date: 01/10/2017
-validation_end_date: 30/09/2022
+# -- Time Periods --
+train_start_date: 01/01/2016
+train_end_date: 31/12/2020
 
-test_start_date: 01/10/2017
-test_end_date: 30/09/2022
+validation_start_date: 01/01/2021
+validation_end_date: 31/12/2025
+
+test_start_date: 01/01/2021
+test_end_date: 31/12/2025
 
 # -- Input Features (Dynamic) --
-# NOTE: The handoff model uses a specific list format for these inputs.
+# 'hindcast_inputs': Historical weather data the model sees to learn current state.
 hindcast_inputs:
-- era5land_dewpoint_temperature_2m
-- era5land_potential_evaporation_FAO_PENMAN_MONTEITH
-- era5land_snow_depth_water_equivalent
-- era5land_surface_net_solar_radiation
-- era5land_surface_net_thermal_radiation
-- era5land_surface_pressure
-- era5land_temperature_2m
-- era5land_total_precipitation
-- era5land_u_component_of_wind_10m
-- era5land_v_component_of_wind_10m
-- era5land_volumetric_soil_water_layer_1
-- era5land_volumetric_soil_water_layer_2
-- era5land_volumetric_soil_water_layer_3
-- era5land_volumetric_soil_water_layer_4
-- imerg_precipitation
-- cpc_precipitation
+  - hres_surface_net_solar_radiation
+  - hres_surface_net_thermal_radiation
+  - hres_surface_pressure
+  - hres_temperature_2m
+  - hres_total_precipitation
+  - imerg_precipitation
+  - cpc_precipitation
 
+# 'forecast_inputs': Future weather data (forecasts) the model uses to predict ahead.
 forecast_inputs:
-- graphcast_temperature_2m
-- graphcast_total_precipitation
-- graphcast_u_component_of_wind_10m
-- graphcast_v_component_of_wind_10m
+  - hres_surface_net_solar_radiation
+  - hres_surface_net_thermal_radiation
+  - hres_surface_pressure
+  - hres_temperature_2m
+  - hres_total_precipitation
+  - graphcast_temperature_2m
+  - graphcast_total_precipitation
+  - graphcast_u_component_of_wind_10m
+  - graphcast_v_component_of_wind_10m
+
+# 'union_mapping': Fills missing values in one dataset with values from another.
+union_mapping:
+  cpc_precipitation: era5land_total_precipitation
+  imerg_precipitation: era5land_total_precipitation
+  graphcast_temperature_2m: era5land_temperature_2m
+  graphcast_total_precipitation: era5land_total_precipitation
+  graphcast_u_component_of_wind_10m: era5land_u_component_of_wind_10m
+  graphcast_v_component_of_wind_10m: era5land_v_component_of_wind_10m
+  hres_surface_net_solar_radiation: era5land_surface_net_solar_radiation
+  hres_surface_net_thermal_radiation: era5land_surface_net_thermal_radiation
+  hres_surface_pressure: era5land_surface_pressure
+  hres_temperature_2m: era5land_temperature_2m
+  hres_total_precipitation: era5land_total_precipitation
+
 
 # -- Input Features (Static) --
 static_attributes:
@@ -140,12 +155,15 @@ output_activation: linear
 
 # Number of days of past data the model uses as input.
 seq_length: 365
+
 # Number of days into the future to predict.
 lead_time: 7
+
 # Number of days the hindcast and forecast LSTMs overlap.
 forecast_overlap: 10
+
 # If True, adds a feature indicating how many days ahead the forecast is for.
-timestep_counter: False
+timestep_counter: True
 
 # -- Dropout --
 output_dropout: 0.4
@@ -224,7 +242,8 @@ validate_every: 1
 validate_n_random_basins: -1
 
 # During testing/validation, ignore periods where observations are completely missing.
-tester_skip_obs_all_nan: False
+tester_skip_obs_all_nan: True
+
 # Method for aggregating multiple predictions.
 tester_sample_reduction: mean
 
@@ -243,13 +262,17 @@ allzero_samples_are_invalid: False
 # Computational settings.
 
 # Number of CPU processes used to load data in parallel.
-num_workers: 2
+num_workers: 0
+
 # How often to print training loss to Tensorboard.
-log_loss_every_nth_update: 8
+log_loss_every_nth_update: 50
+
 # Number of validation plots to save to TensorBoard (0 to disable).
 log_n_figures: 3
 
 # Data caching settings.
 cache:
   enabled: False
-  byte_limit: 2000000000 # ~2GB
+  byte_limit: 2000000000
+  use_swap_memory:
+  
